--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,53 @@
+#spring.application.name=CRUDApplication
+#server.port=8080
+#management.endpoints.web.exposure.include=*
+#management.endpoint.mappings.enabled=true
+#management.endpoints.enabled-by-default=true
+server.port=8080
 spring.application.name=CRUDApplication
+
+# Enable all actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=true
+management.endpoint.mappings.enabled=true
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/fitness_tracker
+#spring.datasource.username=root
+#spring.datasource.password=newpassword
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
+#
+# ? MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/fitness_tracker?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=newpassword
+
+# ? Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+## MySQL Database Configuration
+#spring.datasource.url=jdbc:mysql://localhost:3000/fitness_tracker?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=newpassword
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## Hibernate Configuration
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+## MySQL Configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/fitness_tracker
+#spring.datasource.username=root
+#spring.datasource.password=your_password_here
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## JPA (Hibernate) Configuration
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
