Updated ba ckend logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,17 @@ management.endpoint.mappings.enabled=true
 #spring.sql.init.mode=always
 #
 # ? MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/fitness_tracker?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/fitness_tracker?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://trolley.proxy.rlwy.net:45663/railway
+#spring.datasource.username=root
+#spring.datasource.password=newpassword
+
+spring.datasource.url=jdbc:mysql://trolley.proxy.rlwy.net:45663/fitness_tracker
 spring.datasource.username=root
-spring.datasource.password=newpassword
+spring.datasource.password=JbnrdnwKWSYeaDgAKZHbatQdoDfsPJag
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 
 # ? Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
